syntax = "proto3";

package POGOProtos.Networking.Responses;

import "POGOProtos/Data/PlayerData.proto";

message SetAvatarResponse {
	POGOProtos.Networking.Responses.SetAvatarResponse.Status status = 1;
	POGOProtos.Data.PlayerData player_data = 2;
	enum Status {
		UNSET = 0;
		SUCCESS = 1;
		AVATAR_ALREADY_SET = 2;
		FAILURE = 3;
	}
}

